--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<summary></summary>
 	</details>
 	<nav class="controls">
-		<p><a class="show-all" title="Click to show all poems">Show All Poems</a> | <a class="hide-all" title="Click to hide all poems">Hide All Poems</a></p>
+		<p><a class="show-all" title="Click to show all poems">show</a> | <a class="hide-all" title="Click to hide all poems">hide</a></p>
 		<script>$('a.show-all').click(function () {$('details.poem-body').show("fast");});</script>
 		<script>$('a.hide-all').click(function () {$('details.poem-body').hide("fast");});</script>
 	</nav>
