--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="Author" content="Antoine RJ Wright" />
+	<meta name="Author" content="Robert Brian Huerta" />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png"/>
@@ -33,8 +33,10 @@
 		</summary>
 		<p>
 			most nights that i cant sleep <br />
-            its because you are waiting for me <br />
-            smiling <br />
+           		its because you are waiting for me <br />
+            		smiling <br />
+			happy <br />
+			unbothered <br />
 		</p>
 		<time class="date_duration"><abbr class="dtend" title="2011-05-14, 12:00:00 T">2021*5*21</abbr></time>
 		<article class="assoc-url">
