--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 	<meta name="Author" content="Robert Brian Huerta" />
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="apple-touch-icon" href="apple-touch-icon.png"/>
 	<title>𝔰𝔱𝔦𝔩𝔩 𝔣𝔯𝔢𝔢</title>
 	<link rel="stylesheet" type="text/css" href="stillfree.css" />
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
+	
 <body>
+	
 <header>
-	<h1><a href="https://www.instagram.com/huertamor/" title="𝔰𝔱𝔦𝔩𝔩 𝔣𝔯𝔢𝔢">𝔰𝔱𝔦𝔩𝔩 𝔣𝔯𝔢𝔢</a></h1>
+	<h1><a href="https://www.instagram.com/huertamor/" title="𝔰𝔱𝔦𝔩𝔩 𝔣𝔯𝔢𝔢">𝔰𝔱𝔦𝔩𝔩 𝔣𝔯𝔢𝔢</a></h1>	
 </header>
 
 <!-- template code for each poem entry -->
 <section class="poem-container">
 	<h2 class="ptitle" id="poem-title" title="{poem title}">sleepy head</h2>
-	<details class="poem-body poem-title">
+		<details class="poem-body poem-title">
 		<summary class="description">
-			wishing i didnt see you in my dreams
+			in my dreams
 
 		</summary>
-		<p>
-			most nights that i cant sleep <br />
-           		its because you are waiting for me <br />
+			<p>
+			most nights that i cant sleep <br /> 
+			its because of you <br />
             		smiling <br />
 			happy <br />
 			unbothered <br />
-		</p>
+			waiting <br />
+			to laugh and move freely <br />
+			from one memory to the next
+			</p>
 		
 
 </section>
-
 
 <footer>
 	<p><em>Things change and thats okay</em></p>
 	<p><a href="https://twitter.com/rubbertoehurts/">$$$$$$$$$</a></p>
 </footer>
+
 </body>
+
 </html>
