--- a/index.html
+++ b/index.html
@@ -31,10 +31,29 @@
 			to laugh and move freely <br />
 			from one memory to the next
 			</p>
-		
-
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">sleepy head</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			in my dreams
+
+		</summary>
+			<p>
+			most nights that i cant sleep <br /> 
+			its because of you <br />
+            		smiling <br />
+			happy <br />
+			unbothered <br />
+			waiting <br />
+			to laugh and move freely <br />
+			from one memory to the next
+			</p>
+</section>
+	
+	
 <footer>
 	<p><em>Things change and thats okay</em></p>
 	<p><a href="https://twitter.com/rubbertoehurts/">$$$$$$$$$</a></p>
