--- a/index.html
+++ b/index.html
@@ -35,21 +35,52 @@
 
 <!-- template code for each poem entry -->
 <section class="poem-container">
-	<h2 class="ptitle" id="poem-title" title="{poem title}">sleepy head</h2>
+	<h2 class="ptitle" id="poem-title" title="{poem title}">stop running</h2>
 		<details class="poem-body poem-title">
 		<summary class="description">
-			in my dreams
+			or else
 
 		</summary>
 			<p>
-			most nights that i cant sleep <br /> 
-			its because of you <br />
-            		smiling <br />
-			happy <br />
-			unbothered <br />
-			waiting <br />
-			to laugh and move freely <br />
-			from one memory to the next
+			Pull over <br />
+			Yes here <br />
+			Yes, right now <br /><br />
+				
+			Midday traffic on the 405 is heaven for a hobo <br />
+			Mountains of garbage, excess from success <br />
+			The occasional corpse, human and otherwise <br /> <br />
+
+			Pull over <br />
+			I’m serious <br />
+			Yes now <br /><br />
+
+			I want to hug the barrier<br /> 
+			I want to sleep on the shoulder for a sec <br />
+			Dreaming a stream of concrete <br /><br />
+
+			Endless currents of metal and plastic <br />
+			Flowing in and out of Death Valley <br />
+			Mostly bodies, and stories, so many different stories <br /><br />
+
+			Pull over for a sec <br />
+			Roll up the windows <br />
+			Your hair is in my face or might be closer than it feels <br /><br />
+
+			Let me kiss your face at 100 miles per hour <br />
+			We can laugh about it at the gas station down Crenshaw <br />
+			It’s cheaper to buy a house than change the world, so how about it? <br />
+
+			No, I’m serious, just do it <br />
+			I promise I won’t be long <br />
+			I don’t care about the traffic, let them watch <br />
+
+			Pull over for a sec <br />
+			I need to breathe in the fumes <br />
+			The heat, the heat is talking to me <br /><br />
+
+			Don’t give up <br />
+			Fill her up <br />
+			keep it moving <br />
 			</p>
 </section>
 	
