--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</summary>
 			<p>
 			Pull over <br />
-			Yes here <br />
+			Yes, here <br />
 			Yes, right now <br /><br />
 				
 			Midday traffic on the 405 is heaven for a hobo <br />
