--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			Roll up the windows <br />
 			Your hair is in my face or might be closer than it feels <br /><br />
 
-			Let me kiss your face at 100 miles per hour <br />
+			Let me kiss your feet at 100 miles per hour <br />
 			We can laugh about it at the gas station down Crenshaw <br />
 			It’s cheaper to buy a house than change the world, so how about it? <br />
 
