--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			Pull over <br />
 			I’m serious <br />
-			Yes now <br /><br />
+			Yes, now <br /><br />
 
 			I want to hug the barrier<br /> 
 			I want to sleep on the shoulder for a sec <br />
