--- a/index.html
+++ b/index.html
@@ -83,6 +83,63 @@
 			Keep it moving <br />
 			</p>
 </section>
+
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">Green Line Station</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			tears
+
+		</summary>
+			<p>
+			Most of the human experience is pathetic. 
+			Failure, 
+			incompletion, 
+			dreams never coming to fruition, 
+			useless squirts of energy from and into nothing--
+				a top spinning wildly across an uneven surface, 
+				swaying side to side until eventually, 
+				poof, 
+				the spinning stops…
+
+			………...
+
+			Crying my eyes out at the final stop of the green line, 
+			waiting for a train that is set to arrive any minute, 
+			I marvel at the human capacity to continue in the trenches of the human experience with no sense of hope or direction. 
+				
+			Where exactly did our ancestors think they were going when they left the primordial cave? 
+				Toward the light? 
+
+			Is the human being that thing which crawled out of the dirt, 
+			in search of the light, 
+			that caresses our backs, 
+			each time this earth takes place in another revolution?
+
+			…………
+
+			Revolution--
+				what a funny word. 
+				People seem to think that it is something strange, \
+				or imaginary. 
+				
+			It is as if being, 
+			is a continual process, 
+			of forgetting to see. 
+			The longer we lay in the sun, 
+			the harder it is for us, 
+			to take in, 
+			that which it illuminates. 
+
+			………...
+
+			Even on a nice day, 
+			like today,
+			when there is little else going on
+			except an aimless swirling of cool air from east to west, and back again, most of us cannot seem to take a breath. Its a pessimistic thought, I know, but sitting in between opposing currents of traffic, at the bottom of a stairway leading to a metro transit authority platform, littered with bodies whose existence is defined by a perpetual cycle of misery and mediocrity, built on land marked by generations of displacement, the only thing on display is the unadulterated version of life which escapes the purview of artists. At the end of the Green Line festers the slices of life that escape art.
+
+</section>
 	
 	
 <footer>
