--- a/index.html
+++ b/index.html
@@ -136,8 +136,17 @@
 
 			Even on a nice day, 
 			like today,
-			when there is little else going on
-			except an aimless swirling of cool air from east to west, and back again, most of us cannot seem to take a breath. Its a pessimistic thought, I know, but sitting in between opposing currents of traffic, at the bottom of a stairway leading to a metro transit authority platform, littered with bodies whose existence is defined by a perpetual cycle of misery and mediocrity, built on land marked by generations of displacement, the only thing on display is the unadulterated version of life which escapes the purview of artists. At the end of the Green Line festers the slices of life that escape art.
+			when there is little else going on,
+			except an aimless swirling of cool air from east to west,
+			and back again, 
+			most of us cannot seem to take a breath.
+			
+			Its a pessimistic thought, 
+			I know, 
+			but sitting in between opposing currents of traffic, 
+			at the bottom of a stairway leading to a metro transit authority platform, 
+			littered with bodie, 
+			whose existence is defined by a perpetual cycle of misery and mediocrity, built on land marked by generations of displacement, the only thing on display is the unadulterated version of life which escapes the purview of artists. At the end of the Green Line festers the slices of life that escape art.
 
 </section>
 	
