--- a/index.html
+++ b/index.html
@@ -146,7 +146,17 @@
 			but sitting in between opposing currents of traffic, 
 			at the bottom of a stairway leading to a metro transit authority platform, 
 			littered with bodie, 
-			whose existence is defined by a perpetual cycle of misery and mediocrity, built on land marked by generations of displacement, the only thing on display is the unadulterated version of life which escapes the purview of artists. At the end of the Green Line festers the slices of life that escape art.
+			whose existence is defined by a perpetual cycle,
+			of misery, 
+			and mediocrity, 
+			built on land marked by generations of displacement, 
+			the only thing on display, 
+			is the unadulterated version of life, 
+			which escapes the purview of artists. 
+				
+			At the end of the Green Line, 
+			festers, 
+			the slices of life that escape art.
 
 </section>
 	
