--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
 
 		</summary>
 			<p>
-			Most of the human experience is pathetic. 
-			Failure, 
-			incompletion, 
-			dreams never coming to fruition, 
-			useless squirts of energy from and into nothing--
-				a top spinning wildly across an uneven surface, 
-				swaying side to side until eventually, 
-				poof, 
-				the spinning stops…
+			Most of the human experience is pathetic. <br />
+			Failure, <br />
+			incompletion, <br />
+			dreams never coming to fruition, <br />
+			useless squirts of energy from and into nothing--<br />
+				a top spinning wildly across an uneven surface, <br />
+				swaying side to side until eventually, <br />
+				poof, <br />
+				the spinning stops…<br /><br />
 
-			………...
+			………...<br /><br />
 
-			Crying my eyes out at the final stop of the green line, 
-			waiting for a train that is set to arrive any minute, 
-			I marvel at the human capacity to continue in the trenches of the human experience with no sense of hope or direction. 
+			Crying my eyes out at the final stop of the green line, <br />
+			waiting for a train that is set to arrive any minute, <br />
+			I marvel at the human capacity to continue in the trenches of the human experience with no sense of hope or direction. <br /><br />
 				
-			Where exactly did our ancestors think they were going when they left the primordial cave? 
+			Where exactly did our ancestors think they were going when they left the primordial cave? <br />
 				Toward the light? 
 
 			Is the human being that thing which crawled out of the dirt, 
