--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <!-- template code for each poem entry -->
 <section class="poem-container">
-	<h2 class="ptitle" id="poem-title" title="{poem title}">Green Line Station</h2>
+	<h2 class="ptitle" id="poem-title" title="{poem title}">green line station</h2>
 		<details class="poem-body poem-title">
 		<summary class="description">
 			tears
