--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 				
 			It is as if being, <br />
 			is a continual process, <br />
-			of forgetting to see. <br />
+			of forgetting to see. <br /><br />
+				
 			The longer we lay in the sun, <br />
 			the harder it is for us, <br />
 			to take in, <br />
@@ -145,7 +146,7 @@
 			I know, <br />
 			but sitting in between opposing currents of traffic, <br />
 			at the bottom of a stairway leading to a metro transit authority platform, <br />
-			littered with bodie, <br />
+			littered with bodies, <br />
 			whose existence is defined by a perpetual cycle,<br />
 			of misery, <br />
 			and mediocrity, <br />
