--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
 		</summary>
 			<p>
-			Most of the human experience is pathetic. <br />
+			Most of the human experience is pathetic. <br /><br />
+				
 			Failure, <br />
 			incompletion, <br />
 			dreams never coming to fruition, <br />
