--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
 			unbothered <br />
 			waiting <br />
 			to laugh and move freely <br />
-			from one memory to the next
+			from one memory to the next<br />
+			while i linger<br />
+			on things unsaid<br /><br />
+			
+			with eyes closed<br />
+			the past becomes plastic<br />
+			maleable<br />
+			like putty<br />
+			and i can see what isnt there<br />
+			and never will be<br /><br />
+				
+			whether at night<br />
+			or in the middle of the day<br />
+			the vision persists<br />
+			the thought of you laughing<br />
+			at something i said<br />
+			or crying<br />
+			
+			what does it matter <br />
+			i whisper to myself<br />
+			it was just a dream<br />
+			a hazy stew <br />
+			dont call<br />
+			dont text<br />
+			dont sleep<br />
+			just lying still <br />
+			in a hazy stew<br />
+		
 			</p>
 </section>
 
