--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 			what does it matter <br />
 			i whisper to myself<br />
 			it was just a dream<br />
-			a hazy stew <br />
+			a hazy stew <br /> <br />
+			
 			dont call<br />
 			dont text<br />
 			dont sleep<br />
