--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 <!-- template code for each poem entry -->
 <section class="poem-container">
-	<h2 class="ptitle" id="poem-title" title="{poem title}">Wandering</h2>
+	<h2 class="ptitle" id="poem-title" title="{poem title}">wandering</h2>
 		<details class="poem-body poem-title">
 		<summary class="description">
 			like a stray
@@ -201,48 +201,48 @@
 			<p>
 			cat <br /><br />
 
-			In and out of trash cans <br />
-			Sniffing <br />
-			Stalking <br />
-			Preying<br /><br />
+			in and out of trash cans <br />
+			sniffing <br />
+			stalking <br />
+			preying<br /><br />
 
 			til a fine piece of meat <br />
-			Walks on by<br />
-			Strutting, slowly <br />
-			A whiff of you makes our skin crawl<br />
-			Tails up high <br /><br />
+			walks on by<br />
+			strutting, slowly <br />
+			a whiff of you makes our skin crawl<br />
+			tails up high <br /><br />
 
-			I lower my head as you ask<br />
-			About my family<br />
-			And my job <br />
-			Looking deep into your eyes<br />
-			While biting on your neck<br />
-			Charming my way under your skin<br />
-			The blood drips <br />
-			Down your cute shirt <br /><br />
+			i lower my head as you ask<br />
+			about my family<br />
+			and my money <br />
+			looking deep into your eyes<br />
+			while biting on your neck<br />
+			charming my way under your skin<br />
+			the blood drips <br />
+			down your cute shirt <br /><br />
 
-			No gold around your neck<br />
-			No need <br />
-			It still glistens <br /><br />
+			no gold around your neck<br />
+			no need <br />
+			it still glistens <br /><br />
 
-			Everything is throbbing <br />
-			As I sneakily look for a real moment <br />
-			To pounce <br />
+			everything is throbbing <br />
+			as I sneakily look for a real moment <br />
+			to pounce <br />
 
-			And I do <br />
-			And I remember <br />
-			The taste <br />
-			The thrill <br />
+			and I do <br />
+			and I remember <br />
+			the taste <br />
+			the thrill <br />
 
-			It lingers <br />
-			And then fades <br />
-			And that’s life <br /><br />
+			it lingers <br />
+			and then fades <br />
+			and that’s life <br /><br />
 
-			We hunger <br />
-			And look <br />
-			And eat <br /><br />
+			we hunger <br />
+			and look <br />
+			and eat <br /><br />
 
-			Then forget <br /><br />
+			then forget <br /><br />
 
 
 </section>
