--- a/index.html
+++ b/index.html
@@ -247,6 +247,53 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">how much</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			would it be <br />
+			To turn back the clock<br />
+			A year<br />
+			Even a day<br /><br />
+
+			To deceive oneself<br />
+			About the incessant flow<br />
+			Of time<br />
+			Forward<br /><br />
+
+			For the sake of a dream<br />
+			A flicker of hope<br />
+			That things are perfect<br />
+			And sweet<br /><br />
+
+			How much?<br />
+			I ask the lamp<br />
+			And the spinning clock<br />
+			I beg of The light<br />
+			And ticking and tocking of this worlds heart …beat<br />
+
+			How much would it be<br />
+			To get back<br />
+			Something lost<br />
+
+			I wonder<br />
+			Would it change anything?<br />
+			How I feel?<br />
+			How I hate?<br />
+			Resent?<br /><br />
+
+			Would I be free?<br />
+
+			No…<br /><br /><br />
+
+
+		</summary>
+			<p>
+
+
+
+</section>
 
 <footer>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
