--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
 	<h2 class="ptitle" id="poem-title" title="{poem title}">how much</h2>
 		<details class="poem-body poem-title">
 		<summary class="description">
+				</summary>
+				<p>
 			would it be <br />
 			To turn back the clock<br />
 			A year<br />
