--- a/index.html
+++ b/index.html
@@ -257,39 +257,39 @@
 		</summary>
 			<p>
 
-			To turn back the clock<br />
-			A year<br />
-			Even a day<br /><br />
+			to turn back the clock<br />
+			a year<br />
+			even a day<br /><br />
 
-			To deceive oneself<br />
-			About the incessant flow<br />
-			Of time<br />
-			Forward<br /><br />
+			to deceive oneself<br />
+			about the incessant flow<br />
+			of time<br />
+			forward<br /><br />
 
-			For the sake of a dream<br />
-			A flicker of hope<br />
-			That things are perfect<br />
-			And sweet<br /><br />
+			for the sake of a dream<br />
+			a flicker of hope<br />
+			that things are perfect<br />
+			and sweet<br /><br />
 
-			How much?<br />
-			I ask the lamp<br />
-			And the spinning clock<br />
-			I beg of The light<br />
-			And ticking and tocking of this worlds heart …beat<br />
+			how much?<br />
+			i ask the lamp<br />
+			and the spinning clock<br />
+			i beg of The light<br />
+			and ticking and tocking of this worlds heart …beat<br />
 
-			How much would it be<br />
-			To get back<br />
-			Something lost<br />
+			how much would it be<br />
+			to get back<br />
+			something lost<br />
 
-			I wonder<br />
-			Would it change anything?<br />
-			How I feel?<br />
-			How I hate?<br />
-			Resent?<br /><br />
+			i wonder<br />
+			would it change anything?<br />
+			how I feel?<br />
+			how I hate?<br />
+			resent?<br /><br />
 
-			Would I be free?<br />
+			would I be free?<br />
 
-			No…<br /><br /><br />
+			no…<br /><br /><br />
 			<p>
 
 
