--- a/index.html
+++ b/index.html
@@ -70,45 +70,45 @@
 
 		</summary>
 			<p>
-			Pull over <br />
-			Yes, here <br />
-			Yes, right now <br /><br />
+			pull over <br />
+			yes, here <br />
+			yes, right now <br /><br />
 
-			Midday traffic on the 405 is heaven for a hobo <br />
-			Mountains of garbage, excess from success <br />
-			The occasional corpse, human and otherwise <br /> <br />
+			midday traffic on the 405 is heaven for a hobo <br />
+			mountains of garbage, excess from success <br />
+			the occasional corpse, human and otherwise <br /> <br />
 
-			Pull over <br />
-			I’m serious <br />
-			Yes, now <br /><br />
+			pull over <br />
+			i’m serious <br />
+			yes, now <br /><br />
 
-			I want to hug the barrier<br />
-			I want to sleep on the shoulder for a sec <br />
-			Dreaming a stream of concrete <br /><br />
+			i want to hug the barrier<br />
+			i want to sleep on the shoulder for a sec <br />
+			dreaming a stream of concrete <br /><br />
 
-			Endless currents of metal and plastic <br />
-			Flowing in and out of Death Valley <br />
-			Mostly bodies, and stories, so many different stories <br /><br />
+			endless currents of metal and plastic <br />
+			flowing in and out of death Valley <br />
+			mostly bodies, and stories, so many different stories <br /><br />
 
-			Pull over for a sec <br />
-			Roll up the windows <br />
-			Your hair is in my face or might be closer than it feels <br /><br />
+			pull over for a sec <br />
+			roll up the windows <br />
+			your hair is in my face or might be closer than it feels <br /><br />
 
-			Let me kiss your feet at 100 miles per hour <br />
-			We can laugh about it at the gas station down Crenshaw <br />
-			It’s cheaper to buy a house than change the world, so how about it? <br />
+			let me kiss your feet at 100 miles per hour <br />
+			we can laugh about it at the gas station down crenshaw <br />
+			it’s cheaper to buy a house than change the world, so how about it? <br />
 
-			No, I’m serious, just do it <br />
-			I promise I won’t be long <br />
-			I don’t care about the traffic, let them watch <br />
+			no, i’m serious, just do it <br />
+			i promise i won’t be long <br />
+			i don’t care about the traffic, let them watch <br />
 
-			Pull over for a sec <br />
-			I need to breathe in the fumes <br />
-			The heat, the heat is talking to me <br /><br />
+			pull over for a sec <br />
+			i need to breathe in the fumes <br />
+			the heat, the heat is talking to me <br /><br />
 
-			Don’t give up <br />
-			Fill 'er up <br />
-			Keep it moving <br />
+			don’t give up <br />
+			fill 'er up <br />
+			keep it moving <br />
 			</p>
 </section>
 
@@ -120,7 +120,9 @@
 			tears
 
 		</summary>
+
 			<p>
+
 			Most of the human experience is pathetic. <br /><br />
 
 			Failure, <br />
@@ -188,6 +190,8 @@
 			festers, <br />
 			the slices of life that escape art.<br /><br />
 
+			</p>
+
 </section>
 
 <!-- template code for each poem entry -->
@@ -244,6 +248,7 @@
 
 			then forget <br /><br />
 
+			</p>
 
 </section>
 
@@ -255,6 +260,7 @@
 				would it be
 
 		</summary>
+
 			<p>
 
 			to turn back the clock<br />
@@ -283,9 +289,50 @@
 
 			i wonder<br />
 			<br /><br /><br />
+
+			</p>
+
+</section>
+
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">on dying</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+				a hero
+		</summary>
+
 			<p>
 
+			perhaps I’ll be remembered <br />
+			said no one with their final breath <br />
+			instead <br />
+			i imagine I’d mumble <br />
+			why didn’t I listen? <br />
 
+			and if they say, <br />
+			“at least you tried your best <br />
+			you did not <br />
+			and there is no glory <br />
+			only pain <br />
+				—even that fades <br />
+
+			and no one truly cares <br />
+			when you are gone <br />
+			life is too busy <br />
+			and noisy <br />
+			to remember the fallen <br />
+			—it is always easier to forget <br />
+
+			an unmarked grave <br />
+			in a unkept plot of land <br />
+			that no one visits <br />
+
+			a dry and lonely patch of earth awaits <br />
+
+			<br /><br /><br />
+
+			</p>
 
 </section>
 
