--- a/index.html
+++ b/index.html
@@ -336,6 +336,47 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">good luck</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+				after dark
+		</summary>
+
+			<p>
+
+				tender thoughts of violent acts <br />
+				meshing slowly into the midnight qualms <br />
+				with failure <br />
+				the bodies <br />
+				tossed and turned <br />
+				ruffled and roused <br />
+
+				a spinning mind settles into feathers <br />
+
+				the screen illuminates a lonely ditch <br />
+				hidden in the desert <br />
+				unknown <br />
+				nervous fingers dance across infinite planes <br />
+
+				the slow unwinding moan of regret <br />
+				lingers in the ether <br />
+				a net expertly crafted to contain all human desire <br />
+
+				faded nights of stupid bliss <br />
+				a grumbling corpse <br />
+				mad at the obvious <br />
+
+
+
+			<br /><br /><br />
+
+			</p>
+
+</section>
+
+
 <footer>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	<p><em>Things change and thats okay</em></p>
