--- a/index.html
+++ b/index.html
@@ -308,27 +308,27 @@
 			said no one with their final breath <br />
 			instead <br />
 			i imagine I’d mumble <br />
-			why didn’t I listen? <br />
+			why didn’t I listen? <br /><br />
 
 			and if they say, <br />
 			“at least you tried your best <br />
 			you did not <br />
 			and there is no glory <br />
 			only pain <br />
-				—even that fades <br />
+				—even that fades <br /><br />
 
 			and no one truly cares <br />
 			when you are gone <br />
 			life is too busy <br />
 			and noisy <br />
 			to remember the fallen <br />
-			—it is always easier to forget <br />
+			—it is always easier to forget <br /><br />
 
 			an unmarked grave <br />
 			in a unkept plot of land <br />
-			that no one visits <br />
+			that no one visits <br /><br />
 
-			a dry and lonely patch of earth awaits <br />
+			a dry and lonely patch of earth awaits <br /><br />
 
 			<br /><br /><br />
 
@@ -351,22 +351,22 @@
 				with failure <br />
 				the bodies <br />
 				tossed and turned <br />
-				ruffled and roused <br />
+				ruffled and roused <br /><br />
 
-				a spinning mind settles into feathers <br />
+				a spinning mind settles into feathers <br /><br />
 
 				the screen illuminates a lonely ditch <br />
 				hidden in the desert <br />
 				unknown <br />
-				nervous fingers dance across infinite planes <br />
+				nervous fingers dance across infinite planes <br /><br />
 
 				the slow unwinding moan of regret <br />
 				lingers in the ether <br />
-				a net expertly crafted to contain all human desire <br />
+				a net expertly crafted to contain all human desire <br /><br />
 
 				faded nights of stupid bliss <br />
 				a grumbling corpse <br />
-				mad at the obvious <br />
+				mad at the obvious <br /><br />
 
 
 
