--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
 			i ask the lamp<br />
 			and the spinning clock<br />
 			i beg of The light<br />
-			and ticking and tocking of this worlds heart …beat<br />
+			and ticking and tocking of this worlds heart …beat<br /><br />
 
 			how much would it be<br />
 			to get back<br />
-			something lost<br />
+			something lost<<br /><br />
 
-			i wonder<br />
+			i wonder<br /><br />
 			<br /><br /><br />
 
 			</p>
