--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
 
 			<p>
 
-			perhaps I’ll be remembered <br />
+			perhaps i’ll be remembered <br />
 			said no one with their final breath <br />
 			instead <br />
-			i imagine I’d mumble <br />
-			why didn’t I listen? <br /><br />
+			i imagine i’d mumble <br />
+			why didn’t i listen? <br /><br />
 
 			and if they say, <br />
 			“at least you tried your best <br />
