--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
 			<p>
 
-			Most of the human experience is pathetic. <br /><br />
+			most of the human experience is pathetic. <br /><br />
 
-			Failure, <br />
+			failure, <br />
 			incompletion, <br />
 			dreams never coming to fruition, <br />
 			useless squirts of energy from and into nothing--<br />
@@ -136,9 +136,9 @@
 
 			………...<br /><br />
 
-			Crying my eyes out at the final stop of the green line, <br />
+			crying my eyes out at the final stop of the green line, <br />
 			waiting for a train that is set to arrive any minute, <br />
-			I marvel at the human capacity to continue in the trenches of the human experience with no sense of hope or direction. <br /><br />
+			i marvel at the human capacity to continue in the trenches of the human experience with no sense of hope or direction. <br /><br />
 
 			Where exactly did our ancestors think they were going when they left the primordial cave? <br />
 				Toward the light? <br /><br />
@@ -155,26 +155,26 @@
 				People seem to think that it is something strange, <br />
 				or imaginary. <br /><br />
 
-			It is as if being, <br />
+			it is as if being, <br />
 			is a continual process, <br />
 			of forgetting to see. <br /><br />
 
-			The longer we lay in the sun, <br />
+			the longer we lay in the sun, <br />
 			the harder it is for us, <br />
 			to take in, <br />
 			that which it illuminates. <br /><br />
 
 			………...<br /><br />
 
-			Even on a nice day, <br />
+			even on a nice day, <br />
 			like today,<br />
 			when there is little else going on,<br />
 			except an aimless swirling of cool air from east to west,<br />
 			and back again, <br />
 			most of us cannot seem to take a breath.<br /><br />
 
-			Its a pessimistic thought, <br />
-			I know, <br />
+			it is a pessimistic thought, <br />
+			i know, <br />
 			but sitting in between opposing currents of traffic, <br />
 			at the bottom of a stairway leading to a metro transit authority platform, <br />
 			littered with bodies, <br />
@@ -186,7 +186,7 @@
 			is the unadulterated version of life, <br />
 			which escapes the purview of artists. <br /><br />
 
-			At the end of the Green Line, <br />
+			at the end of the Green Line, <br />
 			festers, <br />
 			the slices of life that escape art.<br /><br />
 
