--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 			it still glistens <br /><br />
 
 			everything is throbbing <br />
-			as I sneakily look for a real moment <br />
+			as i sneakily look for a real moment <br />
 			to pounce <br />
 
-			and I do <br />
-			and I remember <br />
+			and i do <br />
+			and i remember <br />
 			the taste <br />
 			the thrill <br />
 
