--- a/index.html
+++ b/index.html
@@ -376,6 +376,44 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">without</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+				a taste
+		</summary>
+
+			<p>
+
+				the strength of your features <br />
+				my rolling tongues <br />
+				up and down <br />
+				and up again <br />
+				all over your hills and valleys<br /><br />
+
+				sucking in your every breath <br />
+				my mouth wide open <br />
+				my eyes <br />
+				fixed <br />
+				on a spiralof lust <br />
+				deep inside your eyes<br /><br />
+
+				sweet skin <br />
+				refreshing and pale <br />
+				i am thirsty <br />
+				and it shows <br />
+				my dry lips—a desert <br />
+				your moist hands—a well<br /><br />
+
+
+
+			<br /><br /><br />
+
+			</p>
+
+</section>
+
 
 <footer>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
