--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
 			you did not <br />
 			and there is no glory <br />
 			only pain <br />
-				—even that fades <br /><br />
+			&nbsp; —even that fades <br /><br />
 
 			and no one truly cares <br />
 			when you are gone <br />
 			life is too busy <br />
 			and noisy <br />
 			to remember the fallen <br />
-			—it is always easier to forget <br /><br />
+			&nbsp; —it is always easier to forget <br /><br />
 
 			an unmarked grave <br />
 			in a unkept plot of land <br />
