--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			how much?<br />
 			i ask the lamp<br />
 			and the spinning clock<br />
-			i beg of The light<br />
+			i beg of the light<br />
 			and ticking and tocking of this worlds heart …beat<br /><br />
 
 			how much would it be<br />
