--- a/index.html
+++ b/index.html
@@ -414,6 +414,54 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">harvesting time</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+				selfishly
+		</summary>
+
+			<p>
+				in a bubble <br />
+				or a stream <br />
+				something flowing <br />
+				a pinkish hue <br />
+				small bits of ivory <br />
+				clinging to those lips <br />
+				like me <br />
+				a feather <br />
+				upward bound <br /><br />
+
+				chiquita <br />
+				or something like that <br /><br />
+
+				smooth and sly <br />
+				eyes open and on it <br />
+				the ink on your hands is smeared--<br />
+				across my face<br /><br />
+
+				andale<br />
+				lets go <br />
+				swinging<br />
+				side to side and home again<br /><br />
+
+				on a white wagon<br />
+				through a bouncing city<br />
+				im so happy to be here with you<br />
+				sunk in<br />
+				within and without<br />
+				just us<br /><br /><br />
+
+
+
+			</p>
+
+</section>
+
+
+
+
 
 <footer>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
