--- a/index.html
+++ b/index.html
@@ -459,6 +459,37 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">linda guerita</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+				cantando
+		</summary>
+
+			<p>
+
+				in snake skin suit <br />
+				with liquid silver skin <br />
+				a smell like the sweetest slice of heaven <br />
+				and a hint of leather <br /><br />
+
+				your blood is blue <br />
+				and your eyes are gold <br />
+
+				surrounded by <br />
+				a crowd of roses <br /><br />
+
+				loving you is easier <br />
+				the further you are<br /><br />
+
+				so here i am<br />
+				not too close<br />
+				not too far<br /><br />
+
+			</p>
+
+</section>
 
 
 
