--- a/index.html
+++ b/index.html
@@ -491,6 +491,40 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">in the mood</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+				to love and be loved
+		</summary>
+
+			<p>
+
+				Like a young ember <br />
+				Or a tiny being <br /><br />
+
+				Held like a flower you won’t pluck <br />
+				Kissed like the sun on your chest <br /><br />
+
+				I want to melt into your arms<br />
+				And slide down your back <br />
+				Flow into your pores <br />
+				And out of your mouth <br /><br />
+
+				I want to die and be reborn <br />
+				Like the waves <br />
+				And the sand <br /><br />
+
+				I want to die and be reborn—<br />
+				just to do it all over again <br />
+
+
+
+			</p>
+
+</section>
+
 
 
 
