--- a/index.html
+++ b/index.html
@@ -501,22 +501,22 @@
 
 			<p>
 
-				Like a young ember <br />
-				Or a tiny being <br /><br />
+				like a young ember <br />
+				or a tiny being <br /><br />
 
-				Held like a flower you won’t pluck <br />
-				Kissed like the sun on your chest <br /><br />
+				held like a flower you won’t pluck <br />
+				kissed like the sun on your chest <br /><br />
 
-				I want to melt into your arms<br />
-				And slide down your back <br />
-				Flow into your pores <br />
-				And out of your mouth <br /><br />
+				i want to melt into your arms<br />
+				and slide down your back <br />
+				flow into your pores <br />
+				and out of your mouth <br /><br />
 
-				I want to die and be reborn <br />
-				Like the waves <br />
-				And the sand <br /><br />
+				i want to die and be reborn <br />
+				like the waves <br />
+				and the sand <br /><br />
 
-				I want to die and be reborn—<br />
+				i want to die and be reborn—<br />
 				just to do it all over again <br />
 
 
