--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 
 			<p>
 
-				in snake skin suit <br />
+				in a snake skin suit <br />
 				with liquid silver skin <br />
 				a smell like the sweetest slice of heaven <br />
 				and a hint of leather <br /><br />
